--- a/app/src/main/res/layout/fragment_trangchu.xml
+++ b/app/src/main/res/layout/fragment_trangchu.xml
@@ -24,12 +24,12 @@
             tools:layout="@layout/fragment_banner" />
 
     <!--Cong - Begin-->
-    <androidx.fragment.app.FragmentContainerView
+    <fragment
         android:id="@+id/fragment_two"
         android:name="com.google.dunggiaobt.Fragment.TopicAndCategoryFragment"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    </androidx.fragment.app.FragmentContainerView>
+        android:layout_height="wrap_content"
+    />
     <!--Cong - End-->
 
     <!--begin truong-->
