--- a/app/src/main/res/layout/dong_bai_hat_hot.xml
+++ b/app/src/main/res/layout/dong_bai_hat_hot.xml
@@ -43,5 +43,5 @@
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="false"
         android:contentDescription="@string/todo"
-        android:src="@drawable/love" />
+        android:src="@drawable/iconlove" />
 </RelativeLayout>
