--- a/app/src/main/res/layout/dong_danh_sach_bai_hat.xml
+++ b/app/src/main/res/layout/dong_danh_sach_bai_hat.xml
@@ -37,7 +37,7 @@
             android:text="@string/ca_si"
             android:ellipsize="end" />
         <ImageView
-            android:src="@drawable/love"
+            android:src="@drawable/iconlove"
             android:layout_centerVertical="true"
             android:layout_alignParentEnd="true"
             android:id="@+id/imageviewluotthich"
