--- a/app/src/main/res/layout/lines_categories_for_topic.xml
+++ b/app/src/main/res/layout/lines_categories_for_topic.xml
@@ -18,7 +18,8 @@
                 android:id="@+id/imageViewCategoriesForTopic"
                 android:scaleType="centerCrop"
                 android:layout_width="180dp"
-                android:layout_height="180dp">
+                android:layout_height="180dp"
+                android:contentDescription="@string/todo">
 
             </ImageView>
         </FrameLayout>
