--- a/app/src/main/res/drawable/custom_background_play_nhac.xml
+++ b/app/src/main/res/drawable/custom_background_play_nhac.xml
@@ -2,6 +2,6 @@
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient android:angle="315"
-        android:startColor="#d76ddb"
-        android:endColor="#e72b0b55"/>
+        android:startColor="#CCCCFF"
+        android:endColor="#ADD8E6"/>
 </shape>
