--- a/app/src/main/res/layout/dong_search_bai_hat.xml
+++ b/app/src/main/res/layout/dong_search_bai_hat.xml
@@ -40,7 +40,7 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:id="@+id/imgviewSearchLuotThich"
-        android:src="@drawable/love"
+        android:src="@drawable/iconlove"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:layout_marginRight="10dp"/>
