--- a/app/src/main/res/layout/fragment_tim_kiem.xml
+++ b/app/src/main/res/layout/fragment_tim_kiem.xml
@@ -24,11 +24,12 @@
 
     <TextView
         android:id="@+id/txtkhongcodulieu"
+        android:text="Không tìm thấy dữ liệu bài hát"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:textColor="#fff"
-        android:textSize="35sp"
+        android:textColor="#000"
+        android:textSize="25sp"
         android:visibility="gone" />
 
 </RelativeLayout>
